# clambhook

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  flake.nix  go.mod  go.sum  socks5_udp
.github/workflows/: app-review-compliance.yml  ci.yml  e2e.yml  installer-validation.yml  linux-release.yml  release-guard.yml
.wrangler/cache/: pages.json  wrangler-account.json
ci_scripts/: ci_post_clone.sh
clib/: Makefile
clib/include/: cnet.h
clib/src/: crypto.c  netio.c  packet.c
cmd/clambhook/: main.go  shutdown_test.go
cmd/clambhook-license/: main.go
cmd/clambhook-license-server/: main.go
cmd/clambhook-tui/: api_client.go  dashboard.go  dashboard_test.go  main.go
configs/: example.toml
debian/: README.md  changelog  control  copyright  dirs  examples  install  rules
docs/: distribution.md  license-validation.md  macos-v1-parity.md  macos-v1-scope.md  project-review.md  release-validation.md  roadmap.md
docs/app-store/: app-review-demo-profile.toml.template  commercial-setup.md  metadata-en-US.md  privacy.md  review-notes.md  signing.md  support.md  territory-plan.md
docs/website-release/: availability-plan.md  commercial-setup.md  copy-notes.md  linux-release-runbook.md  privacy.md  product-copy-en-US.md  release-runbook.md  signing.md  support-demo-profile.toml.template  support.md
internal/api/: auth.go  auth_test.go  config_import_export.go  config_settings.go  config_settings_test.go  config_txn_test.go  developer_settings.go  developer_settings_test.go  dns.go  dns_test.go  events_ws.go  events_ws_test.go  guard.go  guard_test.go  handlers.go  license.go  license_test.go  policy_groups.go  policy_groups_test.go  prompts.go  rules_cleanup.go  rules_from_connection.go  rules_test.go  server.go  servers.go  servers_test.go  temporary_rules.go  traffic_test.go
internal/chain/: chain.go  chain_test.go  loopback_test.go
internal/config/: config.go  config_test.go  controld.go  controld_test.go  profile.go  validate.go  write.go  write_test.go
internal/developer/: har.go  manager.go  manager_test.go  store.go  tooling.go  tooling_test.go
internal/dnsproxy/: proxy.go  proxy_test.go
internal/engine/: direct_udp_test.go  engine.go  engine_test.go  packaged_config_test.go  tun_test.go
internal/events/: bus.go  bus_test.go  event.go  meter.go  meter_test.go  ringbuf.go  ringbuf_test.go  shard.go  shard_test.go
internal/geo/: geo.go  geo_test.go  resolve.go
internal/license/: appattest.go  cbor.go  crypto.go  evaluate.go  evaluator.go  license_test.go  models.go  receipt.go  receipt_test.go  server.go  server_test.go  states.go  store.go  storekit.go  storekit_test.go  types.go
internal/licensebridge/: bridge.go  bridge_test.go
internal/listener/: events.go  events_test.go  http.go  http_test.go  lifecycle_context_test.go  listener.go  routing.go  socks5.go  socks5_codec.go  socks5_errors.go  socks5_errors_test.go  socks5_test.go  socks5_udp.go  socks5_udp_ipv6_test.go  socks5_udp_test.go  tun_common.go  tun_darwin.go  tun_linux.go  tun_name_darwin.go  tun_name_linux.go  tun_name_unsupported.go  tun_route_darwin.go  tun_route_darwin_test.go  tun_route_linux.go  tun_route_linux_test.go  tun_stack.go  tun_stack_test.go  tun_unsupported.go  tun_unsupported_test.go
internal/logstream/: writer.go  writer_test.go
internal/netwatch/: watcher.go  watcher_darwin.go  watcher_darwin_test.go  watcher_linux.go  watcher_other.go  watcher_test.go
internal/policy/: manager.go  manager_test.go
internal/procattr/: lookup_darwin.go  lookup_linux.go  lookup_linux_test.go  lookup_other.go  procattr.go  procattr_test.go
internal/prompt/: manager.go  manager_test.go
internal/protocol/: protocol.go  registry.go
internal/rules/: rules.go  rules_test.go
packaging/: README.md
scripts/: app-review-compliance-check.sh  archive-ios-app-store.sh  build-android-mobile-aar.sh  build-apple-mobile-xcframework.sh  build-ios-mobile-xcframework.sh  check-macos-signing.sh  check-source-only.sh  ci-linux-container-build.sh  ci-linux-package-recipes.sh  ci-linux-portable-recipes.sh  lint.sh  macos-release-contract-check.sh  package-smoke.sh  prepare-macos-runtime.sh  release-android.sh  release-linux.sh  release-macos.sh  sign-release-tag.sh  test-ci-linux-portable-recipes.sh  upload-release-android.sh  upload-release-linux.sh  upload-release-r2.sh  validate-linux-distros.sh  validate-systemd-unit.sh
ui/linux/: README.md  build.gradle.kts  com.clambhook.Clambhook.yml  gradle.properties  gradlew  meson.build  meson_options.txt  settings.gradle.kts
ui/linux/data/: com.clambhook.Clambhook.desktop.in  com.clambhook.Clambhook.gresource.xml  com.clambhook.Clambhook.metainfo.xml.in
ui/linux/src/: api-client.vala  api-models.vala  clambhook-app.vala  daemon-supervisor.vala  dashboard-store.vala  event-stream-client.vala  formatters.vala  license-service.vala  license-view.vala  main-window.vala  main.vala  parity-models.vala  parity-views.vala  preferences-dialog.vala  settings-store.vala  token-vault.vala
ui/linux/src/main/kotlin/com/clambhook/linux/: Main.kt
ui/linux/src/main/kotlin/com/clambhook/linux/api/: ClambhookApiClient.kt
ui/linux/src/main/kotlin/com/clambhook/linux/daemon/: DaemonSupervisor.kt
ui/linux/src/main/kotlin/com/clambhook/linux/event/: EventStreamClient.kt
ui/linux/src/main/kotlin/com/clambhook/linux/format/: Formatters.kt
ui/linux/src/main/kotlin/com/clambhook/linux/license/: LicenseService.kt
ui/linux/src/main/kotlin/com/clambhook/linux/model/: ApiModels.kt
ui/linux/src/main/kotlin/com/clambhook/linux/settings/: SettingsStore.kt  TokenVault.kt
ui/linux/src/main/kotlin/com/clambhook/linux/store/: DashboardStore.kt
ui/linux/src/main/kotlin/com/clambhook/linux/ui/: MainViewModel.kt  MainWindow.kt
ui/linux/src/test/kotlin/com/clambhook/linux/: ApiModelsTest.kt  DashboardStoreTest.kt  SettingsDaemonTest.kt
ui/linux/tests/: test-api-client.vala  test-dashboard-store.vala  test-license-service.vala  test-main.vala  test-models.vala  test-parity-models.vala  test-settings-daemon.vala
unused-icons/: README.md
(+384 files in other folders)
