option(
  'clambhook_daemon',
  type: 'string',
  value: '',
  description: 'Path to a clambhook daemon executable to install into libexecdir.',
)

option(
  'clambhook_tui',
  type: 'string',
  value: '',
  description: 'Path to a clambhook-tui executable to install into bindir.',
)

option(
  'clambhook_license',
  type: 'string',
  value: '',
  description: 'Path to a clambhook-license helper executable to install into libexecdir.',
)
